# reth

./: .gitignore  AGENTS.md  CHANGELOG.fh.md  CHANGELOG.md  Cargo.toml  Dockerfile.sf  EXEX_TESTING.md  README.fh.md
.dev/: firehose-async-emission-reth.md  firehose-async-emission-tracer.md  firehose-unclean-shutdown.md
.dev/todo/: firehose-flashblocks-to-reth.md  flashblocks-firehose-support.md  investigate-ci-worktree-failure.md  open-up-reth-firehose-tests-for-reuse-in-base.md  release-v2.2.0-fh.md  update-to-reth-2.x.md
.github/workflows/: sf-release.yml
crates/chain-state/src/: deferred_trie.rs
crates/chainspec/: Cargo.toml
crates/engine/tree/: Cargo.toml
crates/engine/tree/src/tree/: mod.rs  payload_validator.rs  precompile_cache.rs  state.rs
crates/engine/tree/tests/: firehose_live_tracing.rs
crates/evm/evm/src/: execute.rs
crates/firehose/: Cargo.toml
crates/firehose-tests/: .gitignore  Cargo.toml
crates/firehose-tests/src/: lib.rs  prestate.rs
crates/firehose-tests/tests/: prestate.rs
crates/firehose-tests/tests/cases/nop_transfer/: block.2099.binpb  block.2099.golden.json  prestate.json
crates/firehose-tests/tests/cases/storage_sstore_oog/: block.2713.actual.binpb  block.2713.actual.txt  block.2713.binpb  block.2713.expected.txt  block.2713.golden.json  prestate.json
crates/firehose/src/: args.rs  block_tracer.rs  executor.rs  inspector.rs  lib.rs  mapper.rs  prelude.rs  re_trace.rs  runner.rs
crates/node/builder/: Cargo.toml
crates/node/builder/src/: rpc.rs
crates/stages/stages/: Cargo.toml
crates/stages/stages/src/stages/: execution.rs
crates/stages/stages/src/stages/execution/: mod.rs
docs/vocs/: package.json  vocs.config.ts
