[package]
name = "reth-firehose"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Firehose integration for Reth: async emission, shutdown wiring, and cursor writing"

[lints]
workspace = true

[dependencies]
# firehose
firehose-tracer.workspace = true

# misc
clap = { workspace = true, features = ["derive", "env"] }
tracing.workspace = true
